feat: [KAN-18] user registration (#6)
